--- a/SEC-SAXS_averageV2.ipynb
+++ b/SEC-SAXS_averageV2.ipynb
@@ -134,9 +134,8 @@
     "        empty = (config['empty_it'] - config['dark_it']) / (config['empty_i0'] - config['dark_i0'])\n",
     "        norm = ( (data['i_t'] - config['dark_it']) / (data['i_0'] - config['dark_i0']) ) * (data['dt'] / empty )\n",
     "\n",
-
     "    else:\n",
-    "        raise RuntimeError(f'Unkown normalization: {normalization}. Allowed values are transmission, transmittance or none')\n",
+    "        raise RuntimeError(f'Unkown normalization: {normalization}. Allowed values are transmittance or none')\n",
     "    return norm\n"
    ]
   },
